--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.45", features = ["derive"] }
 mockall = "0.13.1"
+strum = { version = "0.27.2", features = ["derive"] }
