--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 clap = { version = "4.5.45", features = ["derive"] }
 mockall = "0.13.1"
 strum = { version = "0.27.2", features = ["derive"] }
